[metadata]
name = simrag
version = 0.1.0
author = wanbnn
author_email = wanbnn@outlook.com.br
description = A simple RAG lib to easy use.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wanbnn/simrag
license = MIT

[options]
packages = find:
install_requires =
    numpy

[bdist_wheel]
universal = 1
